Add the GUI part of the AvailableAppUpdatesWindow

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=O cancelar el procedimiento de desinstalación antes d
 ApplicationCouldNotBeLaunched=No se pudo iniciar la aplicación. Por favor, asegúrese de que la aplicación esté instalada correctamente a través del Jam54 Launcher. ¿Le gustaría abrir el Jam54 Launcher ahora?
 APPLYINGPATCH=APLICANDO PARCHE
 Email=Correo electrónico
+PendingApplicationUpdates=Actualizaciones disponibles de la aplicación
+UpdateAll=Actualizar todo
+NoAvailableUpdates=No hay actualizaciones disponibles en este momento. Todas las aplicaciones instaladas están actualizadas.
+InstalledVersion=Versión instalada
+AvailableVersion=Versión disponible
