--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Ou annuler la procédure de désinstallation avant de 
 ApplicationCouldNotBeLaunched=L'application n'a pas pu être lancée. Veuillez vous assurer que l'application est correctement installée via le lanceur Jam54. Souhaitez-vous ouvrir le lanceur Jam54 maintenant ?
 APPLYINGPATCH=APPLICATION DU PATCH
 Email=Courriel
+PendingApplicationUpdates=Mises à jour d'application disponibles
+UpdateAll=Mettre tout à jour
+NoAvailableUpdates=Aucune mise à jour n'est disponible pour le moment. Toutes les applications installées sont à jour.
+InstalledVersion=Version installée
+AvailableVersion=Version disponible
