--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Atau batalkan prosedur penghapusan sebelum mengubah lo
 ApplicationCouldNotBeLaunched=Aplikasi tidak dapat diluncurkan. Harap pastikan aplikasi terinstal dengan benar melalui Jam54 Launcher. Apakah Anda ingin membuka Jam54 Launcher sekarang?
 APPLYINGPATCH=MENERAPKAN PATCH
 Email=Surel
+PendingApplicationUpdates=Pembaruan aplikasi yang tersedia
+UpdateAll=Perbarui semua
+NoAvailableUpdates=Tidak ada pembaruan yang tersedia saat ini. Semua aplikasi yang terpasang sudah diperbarui.
+InstalledVersion=Versi yang terpasang
+AvailableVersion=Versi yang tersedia
