--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=インストールディレクトリの場所を変更
 ApplicationCouldNotBeLaunched=アプリケーションを起動できませんでした。Jam54ランチャーを介してアプリケーションが正しくインストールされていることを確認してください。Jam54ランチャーを開きますか？
 APPLYINGPATCH=パッチを適用しています
 Email=電子メール
+PendingApplicationUpdates=利用可能なアプリケーションの更新
+UpdateAll=すべて更新
+NoAvailableUpdates=現在利用可能な更新はありません。すべてのインストール済みアプリケーションは最新です。
+InstalledVersion=インストールされたバージョン
+AvailableVersion=利用可能なバージョン
