--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Of annuleer de deïnstallatieprocedure voordat u de lo
 ApplicationCouldNotBeLaunched=De applicatie kon niet worden gestart. Zorg ervoor dat de applicatie correct is geïnstalleerd via de Jam54 Launcher. Wilt u de Jam54 Launcher nu openen?
 APPLYINGPATCH=PATCH TOEPASSEN
 Email=E-mail
+PendingApplicationUpdates=Beschikbare applicatie-updates
+UpdateAll=Alles bijwerken
+NoAvailableUpdates=Er zijn momenteel geen updates beschikbaar. Alle geïnstalleerde applicaties zijn up-to-date.
+InstalledVersion=Geïnstalleerde versie
+AvailableVersion=Beschikbare versie
