--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Ou cancele o procedimento de desinstalação antes de 
 ApplicationCouldNotBeLaunched=A aplicação não pôde ser lançada. Por favor, certifique-se de que a aplicação está instalada corretamente através do Jam54 Launcher. Gostaria de abrir o Jam54 Launcher agora?
 APPLYINGPATCH=APLICANDO PATCH
 Email=E-mail
+PendingApplicationUpdates=Atualizações de aplicativos disponíveis
+UpdateAll=Atualizar tudo
+NoAvailableUpdates=Nenhuma atualização disponível no momento. Todos os aplicativos instalados estão atualizados.
+InstalledVersion=Versão instalada
+AvailableVersion=Versão disponível
