--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Kurulum dizini konumunu değiştirmeden önce kaldırm
 ApplicationCouldNotBeLaunched=Uygulama başlatılamadı. Lütfen uygulamanın Jam54 Başlatıcı üzerinden doğru şekilde yüklendiğinden emin olun. Jam54 Başlatıcı'yı şimdi açmak ister misiniz?
 APPLYINGPATCH=YAMA UYGULANIYOR
 Email=E-posta
+PendingApplicationUpdates=Mevcut uygulama güncellemeleri
+UpdateAll=Tümünü güncelle
+NoAvailableUpdates=Mevcutta herhangi bir güncelleme bulunmamaktadır. Tüm yüklü uygulamalar günceldir.
+InstalledVersion=Yüklenen sürüm
+AvailableVersion=Mevcut sürüm
