--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=或在更改安装目录位置之前取消卸载过程
 ApplicationCouldNotBeLaunched=无法启动应用程序。请确保通过 Jam54 Launcher 正确安装了应用程序。您现在要打开 Jam54 Launcher 吗？
 APPLYINGPATCH=应用补丁
 Email=电子邮件
+PendingApplicationUpdates=可用应用程序更新
+UpdateAll=全部更新
+NoAvailableUpdates=目前没有可用更新。所有已安装的应用程序都已经更新。
+InstalledVersion=已安装版本
+AvailableVersion=可用版本
