--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Oder brechen Sie den Deinstallationsvorgang ab, bevor 
 ApplicationCouldNotBeLaunched=Die Anwendung konnte nicht gestartet werden. Bitte stellen Sie sicher, dass die Anwendung über den Jam54 Launcher korrekt installiert ist. Möchten Sie den Jam54 Launcher jetzt öffnen?
 APPLYINGPATCH=PATCH ANWENDEN
 Email=E-Mail
+PendingApplicationUpdates=Verfügbare Anwendungsaktualisierungen
+UpdateAll=Alle aktualisieren
+NoAvailableUpdates=Derzeit sind keine Updates verfügbar. Alle installierten Anwendungen sind auf dem neuesten Stand.
+InstalledVersion=Installierte Version
+AvailableVersion=Verfügbare Version
