--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Or cancel the uninstall procedure before changing the 
 ApplicationCouldNotBeLaunched=The application could not be launched. Please ensure the application is installed correctly through the Jam54 Launcher. Would you like to open the Jam54 Launcher now?
 APPLYINGPATCH=APPLYING PATCH
 Email=Email
+PendingApplicationUpdates=Pending application updates
+UpdateAll=Update all
+NoAvailableUpdates=No updates available at the moment. All installed applications are up to date.
+InstalledVersion=Installed version
+AvailableVersion=Available version
