--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -83,3 +83,8 @@ CancelValidationProcedure=Või katkestage desinstallimisprotseduur enne installi
 ApplicationCouldNotBeLaunched=Rakendust ei õnnestunud käivitada. Palun veenduge, et rakendus oleks Jam54 käivitaja kaudu korrektselt installitud. Kas soovite praegu avada Jam54 käivitaja?
 APPLYINGPATCH=PARANDUSE RAKENDAMINE
 Email=E-kiri
+PendingApplicationUpdates=Saadaolevad rakenduse värskendused
+UpdateAll=Värskenda kõiki
+NoAvailableUpdates=Praegu pole saadaval ühtegi värskendust. Kõik paigaldatud rakendused on ajakohased.
+InstalledVersion=Paigaldatud versioon
+AvailableVersion=Saadaolev versioon
