Added a radial progression bar + textual description of the ongoing update process to the `AvailableAppUpdatesWindow`

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -88,3 +88,5 @@ UpdateAll=تحديث الكل
 NoAvailableUpdates=لا تتوفر تحديثات في الوقت الحالي. جميع التطبيقات المثبتة مُحدّثة.
 InstalledVersion=الإصدار المثبت
 AvailableVersion=الإصدار المتاح
+InstallationQueued=تمت إضافة التثبيت للقائمة
+UpdateQueued=تمت إضافة التحديث للقائمة
