--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -88,3 +88,5 @@ UpdateAll=Alle aktualisieren
 NoAvailableUpdates=Derzeit sind keine Updates verfügbar. Alle installierten Anwendungen sind auf dem neuesten Stand.
 InstalledVersion=Installierte Version
 AvailableVersion=Verfügbare Version
+InstallationQueued=Installation in Warteschlange
+UpdateQueued=Update in Warteschlange
