--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -88,3 +88,5 @@ UpdateAll=Actualizar todo
 NoAvailableUpdates=No hay actualizaciones disponibles en este momento. Todas las aplicaciones instaladas están actualizadas.
 InstalledVersion=Versión instalada
 AvailableVersion=Versión disponible
+InstallationQueued=Instalación en cola
+UpdateQueued=Actualización en cola
