--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -88,3 +88,5 @@ UpdateAll=Värskenda kõiki
 NoAvailableUpdates=Praegu pole saadaval ühtegi värskendust. Kõik paigaldatud rakendused on ajakohased.
 InstalledVersion=Paigaldatud versioon
 AvailableVersion=Saadaolev versioon
+InstallationQueued=Paigaldamine järjekorras
+UpdateQueued=Uuendamine järjekorras
