--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -88,3 +88,5 @@ UpdateAll=Mettre tout à jour
 NoAvailableUpdates=Aucune mise à jour n'est disponible pour le moment. Toutes les applications installées sont à jour.
 InstalledVersion=Version installée
 AvailableVersion=Version disponible
+InstallationQueued=Installation en attente
+UpdateQueued=Mise à jour en attente
