--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -88,3 +88,5 @@ UpdateAll=सभी को अपडेट करें
 NoAvailableUpdates=वर्तमान में कोई अपडेट उपलब्ध नहीं है। सभी स्थापित एप्लिकेशन अपडेट हैं।
 InstalledVersion=स्थापित संस्करण
 AvailableVersion=उपलब्ध संस्करण
+InstallationQueued=स्थापना कतार में
+UpdateQueued=अपडेट कतार में
