--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -88,3 +88,5 @@ UpdateAll=Perbarui semua
 NoAvailableUpdates=Tidak ada pembaruan yang tersedia saat ini. Semua aplikasi yang terpasang sudah diperbarui.
 InstalledVersion=Versi yang terpasang
 AvailableVersion=Versi yang tersedia
+InstallationQueued=Pemasangan dalam antrian
+UpdateQueued=Pembaruan dalam antrian
