--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -88,3 +88,5 @@ UpdateAll=すべて更新
 NoAvailableUpdates=現在利用可能な更新はありません。すべてのインストール済みアプリケーションは最新です。
 InstalledVersion=インストールされたバージョン
 AvailableVersion=利用可能なバージョン
+InstallationQueued=インストール待ち
+UpdateQueued=更新待ち
