--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -88,3 +88,5 @@ UpdateAll=모두 업데이트
 NoAvailableUpdates=현재 사용할 수 있는 업데이트가 없습니다. 모든 설치된 애플리케이션이 최신 상태입니다.
 InstalledVersion=설치된 버전
 AvailableVersion=사용 가능한 버전
+InstallationQueued=설치 대기 중
+UpdateQueued=업데이트 대기 중
