--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -88,3 +88,5 @@ UpdateAll=Alles bijwerken
 NoAvailableUpdates=Er zijn momenteel geen updates beschikbaar. Alle geïnstalleerde applicaties zijn up-to-date.
 InstalledVersion=Geïnstalleerde versie
 AvailableVersion=Beschikbare versie
+InstallationQueued=Installatie in de wachtrij
+UpdateQueued=Update in de wachtrij
