--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -88,3 +88,5 @@ UpdateAll=Atualizar tudo
 NoAvailableUpdates=Nenhuma atualização disponível no momento. Todos os aplicativos instalados estão atualizados.
 InstalledVersion=Versão instalada
 AvailableVersion=Versão disponível
+InstallationQueued=Instalação na fila
+UpdateQueued=Atualização na fila
