--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -88,3 +88,5 @@ UpdateAll=Обновить все
 NoAvailableUpdates=В настоящее время нет доступных обновлений. Все установленные приложения обновлены.
 InstalledVersion=Установленная версия
 AvailableVersion=Доступная версия
+InstallationQueued=Установка в очереди
+UpdateQueued=Обновление в очереди
