--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -88,3 +88,5 @@ UpdateAll=Tümünü güncelle
 NoAvailableUpdates=Mevcutta herhangi bir güncelleme bulunmamaktadır. Tüm yüklü uygulamalar günceldir.
 InstalledVersion=Yüklenen sürüm
 AvailableVersion=Mevcut sürüm
+InstallationQueued=Kurulum sırasında
+UpdateQueued=Güncelleme sırasında
