--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -88,3 +88,5 @@ UpdateAll=全部更新
 NoAvailableUpdates=目前没有可用更新。所有已安装的应用程序都已经更新。
 InstalledVersion=已安装版本
 AvailableVersion=可用版本
+InstallationQueued=安装排队中
+UpdateQueued=更新排队中
