If there are no updates available, the `AvailableAppUpdatesWindow` now also shows the apps that aren't installed yet but can be installed

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -90,3 +90,5 @@ InstalledVersion=الإصدار المثبت
 AvailableVersion=الإصدار المتاح
 InstallationQueued=تمت إضافة التثبيت للقائمة
 UpdateQueued=تمت إضافة التحديث للقائمة
+InstallAll=تثبيت الكل
+ApplicationsAvailableToInstall=التطبيقات المتاحة للتثبيت
