--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -90,3 +90,5 @@ InstalledVersion=Installierte Version
 AvailableVersion=Verfügbare Version
 InstallationQueued=Installation in Warteschlange
 UpdateQueued=Update in Warteschlange
+InstallAll=Alle installieren
+ApplicationsAvailableToInstall=Verfügbare Anwendungen zur Installation
