--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -90,3 +90,5 @@ InstalledVersion=Installed version
 AvailableVersion=Available version
 InstallationQueued=Installation queued
 UpdateQueued=Update queued
+InstallAll=Install all
+ApplicationsAvailableToInstall=Applications available to install
