--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -90,3 +90,5 @@ InstalledVersion=Paigaldatud versioon
 AvailableVersion=Saadaolev versioon
 InstallationQueued=Paigaldamine järjekorras
 UpdateQueued=Uuendamine järjekorras
+InstallAll=Paigalda kõik
+ApplicationsAvailableToInstall=Saadaolevad rakendused paigaldamiseks
