--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -90,3 +90,5 @@ InstalledVersion=Version installée
 AvailableVersion=Version disponible
 InstallationQueued=Installation en attente
 UpdateQueued=Mise à jour en attente
+InstallAll=Installer tout
+ApplicationsAvailableToInstall=Applications disponibles à installer
