--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -90,3 +90,5 @@ InstalledVersion=स्थापित संस्करण
 AvailableVersion=उपलब्ध संस्करण
 InstallationQueued=स्थापना कतार में
 UpdateQueued=अपडेट कतार में
+InstallAll=सभी स्थापित करें
+ApplicationsAvailableToInstall=स्थापित करने के लिए उपलब्ध एप्लिकेशन
