--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -90,3 +90,5 @@ InstalledVersion=Versi yang terpasang
 AvailableVersion=Versi yang tersedia
 InstallationQueued=Pemasangan dalam antrian
 UpdateQueued=Pembaruan dalam antrian
+InstallAll=Pasang semua
+ApplicationsAvailableToInstall=Aplikasi yang tersedia untuk diinstal
