--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -90,3 +90,5 @@ InstalledVersion=インストールされたバージョン
 AvailableVersion=利用可能なバージョン
 InstallationQueued=インストール待ち
 UpdateQueued=更新待ち
+InstallAll=すべてインストール
+ApplicationsAvailableToInstall=インストール可能なアプリケーション
