--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -90,3 +90,5 @@ InstalledVersion=Versão instalada
 AvailableVersion=Versão disponível
 InstallationQueued=Instalação na fila
 UpdateQueued=Atualização na fila
+InstallAll=Instalar tudo
+ApplicationsAvailableToInstall=Aplicações disponíveis para instalar
