--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -90,3 +90,5 @@ InstalledVersion=Установленная версия
 AvailableVersion=Доступная версия
 InstallationQueued=Установка в очереди
 UpdateQueued=Обновление в очереди
+InstallAll=Установить всё
+ApplicationsAvailableToInstall=Доступные для установки приложения
