--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -90,3 +90,5 @@ InstalledVersion=Yüklenen sürüm
 AvailableVersion=Mevcut sürüm
 InstallationQueued=Kurulum sırasında
 UpdateQueued=Güncelleme sırasında
+InstallAll=Hepsini Yükle
+ApplicationsAvailableToInstall=Kurulabilir Uygulamalar
