--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -90,3 +90,5 @@ InstalledVersion=已安装版本
 AvailableVersion=可用版本
 InstallationQueued=安装排队中
 UpdateQueued=更新排队中
+InstallAll=全部安装
+ApplicationsAvailableToInstall=可安装的应用程序
