--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -90,3 +90,5 @@ InstalledVersion=Geïnstalleerde versie
 AvailableVersion=Beschikbare versie
 InstallationQueued=Installatie in de wachtrij
 UpdateQueued=Update in de wachtrij
+InstallAll=Alles installeren
+ApplicationsAvailableToInstall=Beschikbare applicaties om te installeren
