Replace the chunks approach to update existing apps with a delta compression based approach

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -92,3 +92,5 @@ InstallationQueued=تمت إضافة التثبيت للقائمة
 UpdateQueued=تمت إضافة التحديث للقائمة
 InstallAll=تثبيت الكل
 ApplicationsAvailableToInstall=التطبيقات المتاحة للتثبيت
+DOWNLOADINGPATCH=تحميل التصحيح
+VERIFYING=التحقق
