--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -92,3 +92,5 @@ InstallationQueued=Installation in Warteschlange
 UpdateQueued=Update in Warteschlange
 InstallAll=Alle installieren
 ApplicationsAvailableToInstall=Verfügbare Anwendungen zur Installation
+DOWNLOADINGPATCH=PATCH WIRD HERUNTERGELADEN
+VERIFYING=ÜBERPRÜFUNG
