--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -92,3 +92,5 @@ InstallationQueued=Instalación en cola
 UpdateQueued=Actualización en cola
 InstallAll=Instalar todo
 ApplicationsAvailableToInstall=Aplicaciones disponibles para instalar
+DOWNLOADINGPATCH=DESCARGANDO PARCHE
+VERIFYING=VERIFICANDO
