--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -92,3 +92,5 @@ InstallationQueued=Paigaldamine järjekorras
 UpdateQueued=Uuendamine järjekorras
 InstallAll=Paigalda kõik
 ApplicationsAvailableToInstall=Saadaolevad rakendused paigaldamiseks
+DOWNLOADINGPATCH=PARANDUSE ALLALAADIMINE
+VERIFYING=KINNITAMINE
