--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -92,3 +92,5 @@ InstallationQueued=Installation en attente
 UpdateQueued=Mise à jour en attente
 InstallAll=Installer tout
 ApplicationsAvailableToInstall=Applications disponibles à installer
+DOWNLOADINGPATCH=TÉLÉCHARGEMENT DU PATCH
+VERIFYING=VÉRIFICATION
