--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -92,3 +92,5 @@ InstallationQueued=स्थापना कतार में
 UpdateQueued=अपडेट कतार में
 InstallAll=सभी स्थापित करें
 ApplicationsAvailableToInstall=स्थापित करने के लिए उपलब्ध एप्लिकेशन
+DOWNLOADINGPATCH=पैच डाउनलोड हो रहा है
+VERIFYING=सत्यापित कर रहा है
