--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -92,3 +92,5 @@ InstallationQueued=Pemasangan dalam antrian
 UpdateQueued=Pembaruan dalam antrian
 InstallAll=Pasang semua
 ApplicationsAvailableToInstall=Aplikasi yang tersedia untuk diinstal
+DOWNLOADINGPATCH=SEDANG MENGUNDUH PATCH
+VERIFYING=MEMVERIFIKASI
