--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -92,3 +92,5 @@ InstallationQueued=インストール待ち
 UpdateQueued=更新待ち
 InstallAll=すべてインストール
 ApplicationsAvailableToInstall=インストール可能なアプリケーション
+DOWNLOADINGPATCH=パッチをダウンロードしています
+VERIFYING=検証中
