--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -92,3 +92,5 @@ InstallationQueued=설치 대기 중
 UpdateQueued=업데이트 대기 중
 InstallAll=모두 설치
 ApplicationsAvailableToInstall=설치 가능한 응용 프로그램
+DOWNLOADINGPATCH=패치 다운로드 중
+VERIFYING=확인 중
