--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -92,3 +92,5 @@ InstallationQueued=Instalação na fila
 UpdateQueued=Atualização na fila
 InstallAll=Instalar tudo
 ApplicationsAvailableToInstall=Aplicações disponíveis para instalar
+DOWNLOADINGPATCH=BAIXANDO PATCH
+VERIFYING=VERIFICANDO
