--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -92,3 +92,5 @@ InstallationQueued=Установка в очереди
 UpdateQueued=Обновление в очереди
 InstallAll=Установить всё
 ApplicationsAvailableToInstall=Доступные для установки приложения
+DOWNLOADINGPATCH=ЗАГРУЖАЕТСЯ ПАТЧ
+VERIFYING=ПРОВЕРКА
