--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -92,3 +92,5 @@ InstallationQueued=Installation queued
 UpdateQueued=Update queued
 InstallAll=Install all
 ApplicationsAvailableToInstall=Applications available to install
+DOWNLOADINGPATCH=DOWNLOADING PATCH
+VERIFYING=VERIFYING
