--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -92,3 +92,5 @@ InstallationQueued=Kurulum sırasında
 UpdateQueued=Güncelleme sırasında
 InstallAll=Hepsini Yükle
 ApplicationsAvailableToInstall=Kurulabilir Uygulamalar
+DOWNLOADINGPATCH=YAMAYI İNDİRİYOR
+VERIFYING=DOĞRULANIYOR
