--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -92,3 +92,5 @@ InstallationQueued=安装排队中
 UpdateQueued=更新排队中
 InstallAll=全部安装
 ApplicationsAvailableToInstall=可安装的应用程序
+DOWNLOADINGPATCH=正在下载补丁
+VERIFYING=正在验证
